# zengeld-canvas

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  README.md
crates/canvas/: Cargo.toml  DOCS.md  README.md
crates/canvas-py/: CONTRIBUTING.md  Cargo.toml  DOCS.md  LICENSE-APACHE  LICENSE-MIT  README.md  pyproject.toml  test_chart.py
crates/canvas-py/src/: lib.rs
crates/canvas-wasm/: CONTRIBUTING.md  Cargo.toml  DOCS.md  README.md  package.json  test_chart.js
crates/canvas-wasm/src/: lib.rs
crates/canvas/examples/: chart_gallery.rs
crates/canvas/src/: lib.rs
crates/canvas/src/api/: chart.rs  config.rs  mod.rs
crates/canvas/src/coords/: mod.rs  price_scale.rs  time_scale.rs  viewport.rs
crates/canvas/src/core/: color.rs  config.rs  format.rs  math.rs  mod.rs  theme.rs  types.rs
crates/canvas/src/layout/: mod.rs  multichart.rs  pane.rs
crates/canvas/src/model/: indicators.rs  mod.rs
crates/canvas/src/model/annotations/: markers.rs  mod.rs  price_line.rs
crates/canvas/src/model/overlays/: compare.rs  grid.rs  legend.rs  mod.rs  watermark.rs
crates/canvas/src/model/series/: data.rs  enums.rs  mod.rs  options.rs
crates/canvas/src/primitives/: mod.rs  registry.rs
crates/canvas/src/primitives/catalog/: mod.rs
crates/canvas/src/primitives/catalog/annotations/: anchored_text.rs  callout.rs  comment.rs  flag.rs  mod.rs  note.rs  price_label.rs  price_note.rs  sign.rs  signpost.rs  table.rs  text.rs
crates/canvas/src/primitives/catalog/arrows/: arrow_down.rs  arrow_line.rs  arrow_marker.rs  arrow_up.rs  mod.rs
crates/canvas/src/primitives/catalog/brushes/: brush.rs  highlighter.rs  mod.rs
crates/canvas/src/primitives/catalog/channels/: disjoint_channel.rs  flat_top_bottom.rs  mod.rs  parallel_channel.rs  regression_trend.rs
crates/canvas/src/primitives/catalog/cycles/: cycle_lines.rs  mod.rs  sine_wave.rs  time_cycles.rs
crates/canvas/src/primitives/catalog/elliott/: elliott_correction.rs  elliott_double_combo.rs  elliott_impulse.rs  elliott_triangle.rs  elliott_triple_combo.rs  mod.rs
crates/canvas/src/primitives/catalog/events/: breakdown.rs  crossover.rs  custom_event.rs  divergence.rs  mod.rs  momentum_event.rs  pattern_match.rs  trend_event.rs  volume_event.rs  zone_event.rs
crates/canvas/src/primitives/catalog/fibonacci/: arcs.rs  channel.rs  circles.rs  fan.rs  mod.rs  retracement.rs  speed_resistance.rs  spiral.rs  time_zones.rs  trend_extension.rs  trend_time.rs  wedge.rs
crates/canvas/src/primitives/catalog/gann/: gann_box.rs  gann_fan.rs  gann_square.rs  gann_square_fixed.rs  mod.rs
crates/canvas/src/primitives/catalog/icons/: emoji.rs  image.rs  mod.rs
crates/canvas/src/primitives/catalog/lines/: cross_line.rs  extended_line.rs  horizontal_line.rs  horizontal_ray.rs  info_line.rs  mod.rs  ray.rs  trend_angle.rs  trend_line.rs  vertical_line.rs
crates/canvas/src/primitives/catalog/measurement/: date_range.rs  mod.rs  price_date_range.rs  price_range.rs
crates/canvas/src/primitives/catalog/patterns/: abcd_pattern.rs  cypher_pattern.rs  head_shoulders.rs  mod.rs  three_drives.rs  triangle_pattern.rs  xabcd_pattern.rs
crates/canvas/src/primitives/catalog/pitchforks/: inside_pitchfork.rs  mod.rs  modified_schiff.rs  pitchfork.rs  schiff.rs
crates/canvas/src/primitives/catalog/projection/: bars_pattern.rs  forecast.rs  general.rs  long_position.rs  (+3 more)
crates/canvas/src/primitives/core/: config.rs  mod.rs  render.rs  traits.rs  types.rs
crates/canvas/src/primitives/signals/: manager.rs  mod.rs  types.rs
crates/canvas/src/primitives/trades/: mod.rs  types.rs
crates/canvas/src/primitives/utils/: mod.rs  point_labels.rs
crates/canvas/src/render/: mod.rs
crates/canvas/src/render/chart/: annotations.rs  indicators.rs  mod.rs  overlays.rs  series.rs
crates/canvas/src/render/engine/: backend.rs  batch.rs  commands.rs  coords.rs  crisp.rs  mod.rs  path.rs  svg_backend.rs  types.rs
(+17 files in other folders)
