[workspace]
resolver = "2"
members = [
    "crates/canvas",
    "crates/canvas-py",
    "crates/canvas-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zengeld/zengeld-canvas"
authors = ["zengeld"]
rust-version = "1.85"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "s"
lto = true
