[package]
name = "zengeld-canvas-py"
version = "0.1.6"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Python bindings for zengeld-canvas chart rendering engine"
repository = "https://github.com/zengeld/zengeld-canvas"
authors = ["zengeld"]
rust-version = "1.85"

[lib]
name = "zengeld_canvas"
crate-type = ["cdylib"]

[dependencies]
zengeld-canvas = { path = "../canvas" }
pyo3 = { version = "0.23", features = ["extension-module"] }
