[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "zengeld-canvas"
version = "0.1.9"
description = "High-performance SVG chart rendering engine for financial data visualization"
readme = "README.md"
license = { text = "MIT OR Apache-2.0" }
license-files = ["LICENSE-MIT", "LICENSE-APACHE"]
authors = [{ name = "zengeld" }]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Visualization",
]
keywords = ["charts", "trading", "svg", "visualization", "finance", "candlestick"]

[project.urls]
Homepage = "https://github.com/zengeld/zengeld-canvas"
Repository = "https://github.com/zengeld/zengeld-canvas"
Documentation = "https://docs.rs/zengeld-canvas"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "zengeld_canvas"
