[package]
name = "zengeld-canvas-wasm"
version = "0.1.8"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "WebAssembly bindings for zengeld-canvas chart rendering engine"
repository = "https://github.com/zengeld/zengeld-canvas"
authors = ["zengeld"]
rust-version = "1.85"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
zengeld-canvas = { path = "../canvas" }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "Document",
    "Window",
]

