[package]
name = "zengeld-canvas"
version = "0.1.9"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "High-performance SVG chart rendering engine for financial data visualization"
repository = "https://github.com/zengeld/zengeld-canvas"
homepage = "https://github.com/zengeld/zengeld-canvas"
documentation = "https://docs.rs/zengeld-canvas"
readme = "README.md"
keywords = ["charts", "trading", "svg", "visualization", "finance"]
categories = ["visualization", "rendering::graphics-api", "graphics"]
authors = ["zengeld"]
rust-version = "1.85"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
# For examples

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
